--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "bootstrap": "^5.3.3",
     "clsx": "^2.1.1",
     "framer-motion": "^12.0.6",
     "motion": "^12.0.6",
